--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testing",
   "version": "1.0.0",
   "description": "testing the noble library",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "noble": "^1.9.1"
   },
   "devDependencies": {
@@ -20,5 +21,4 @@
     "type": "git",
     "url": "https://github.com/blackBoyCode/electron-noble.git"
   }
-
 }
